give up post... use temp record

--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -24,16 +24,27 @@ select{
     border: 1px solid #CACACA;
 }
 .RL-Webs{
-    display:inline-block;
-    height:400px;
+    /*display:inline-block;
+    padding:40px;
+    width:100%;
+    height:500px;
     border:none;
-    overflow-x:hidden;
+    overflow-x:hidden;*/
+    width:100%;
+    height:100vh;
 }
 .RL-SmallText{
     font-size:10px;
+    cursor:pointer;
 }
-.RL-StartLook{
+#VisitsRecordApp{
+    width:auto;
+    margin-top:30vh;
+}
+#RL-StartLook{
     position:absolute;
     right:0;
     bottom:0;
+    z-index:-1;
 }
+
