--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -39,10 +39,9 @@ select{
 }
 #VisitsRecordApp{
     width:auto;
-    margin-top:30vh;
 }
 #RL-StartLook{
-    position:absolute;
+    position:fixed;
     right:0;
     bottom:0;
     z-index:-1;
