--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -74,7 +74,9 @@ button{
     cursor:pointer;
     color:#00796B;
 }
-
+.RL-clickable{
+    cursor:pointer;
+}
 a:hover{
     text-decoration:none;
 }
