--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -84,6 +84,9 @@ a:hover{
 
 #VisitsRecordApp{
     width:auto;
+    overflow-y: auto;
+    overflow-x:hidden;
+    height: 100vh;
 }
 #RL-StartLook{
     position:fixed;
